# omnia-ae-python

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  azure-pipeline.yaml  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml  resource.yml
examples/: example_notebook.ipynb  usage_examples.ipynb
omnia_ae/: __init__.py  api.py  models.py
src/omnia_ae/: __init__.py  api.py  http_client.py  models.py
src/omnia_ae_api/: __init__.py  api.py  helpers.py  http_client.py  models.py
tests/: test_api.py
