[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

# Ignore flat-layout.
[tool.setuptools]
py-modules = []

[project]
name = "omnia_ae_api"
version = "1.0.0"
authors = [
  { name="Equinor Omnia Industrial IoT Team", email="omniaindiot@equinor.com" },
]
description = "Official Python SDK for the Omnia AlarmEvents API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "azure.identity",
    "opentelemetry-instrumentation-requests"
]

[project.urls]
"Homepage" = "https://github.com/equinor/omnia-ae-python"
"Bug Tracker" = "https://github.com/equinor/omnia-ae-python/issues"

[tool.pyright]