[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "omnia_ae_api"
version = "1.0.0"
authors = ["Equinor Omnia Industrial IoT Team <omniaindiot@equinor.com>"]

description = "Official Python SDK for the Omnia AlarmEvents API"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
azure-identity = "^1.15.0"
opentelemetry-instrumentation-requests = "^0.42b0"