[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "omnia_ae_api"
version = "1.0.2"
authors = ["Equinor Omnia Industrial IoT Team <omniaindiot@equinor.com>"]

description = "Official Python SDK for the Omnia AlarmEvents API"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
azure-identity = "^1.19.0"
requests-mock = "^1.12.1"
pytest = "^8.3.4"
azure-core = "^1.32.0"
poetry = "^1.8.4"
build = "^1.2.2.post1"
opentelemetry-instrumentation-requests = "^0.48b0"